# felt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LAYERING-PLAN.md  M0-M3.md  ROADMAP.md  VISION.md  flake.nix  mprocs.yaml
crates/felt-platform/: Cargo.toml
crates/felt-platform/examples/: benchmark_rects.md  benchmark_rects.rs  rectangles.rs  rectangles_transparent.rs  simple_window.rs  transparent_window.rs
crates/felt-platform/src/: application.rs  lib.rs  renderer.rs  simple_text.rs  stats.rs
crates/felt-ui/: Cargo.toml
crates/felt-ui/src/: draw.rs  element.rs  elements.rs  lib.rs
crates/felt-ui/src/widget/: canvas.rs  container.rs  mod.rs  scroll.rs
demo/: Cargo.toml
demo/src/: main.rs
