[package]
name = "felt-platform"
version = "0.1.0"
edition = "2024"
description = "Platform abstraction for Felt UI (winit glue, IME, clipboard, dialogs)"
license = "MIT OR Apache-2.0"

[dependencies]
winit = { version = "0.29", features = ["rwh_06"] }
wgpu = "0.19"
vello = { version = "0.3.0", features = ["wgpu"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
futures-intrusive = "0.5"
